<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.eclipse.epsilon.emc.magicdraw</groupId>
    <artifactId>org.eclipse.epsilon.emc.magicdraw.parent</artifactId>
    <version>2.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <tycho-version>2.7.4</tycho-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
    </properties>

    <modules>
        <module>bundles/org.eclipse.epsilon.emc.magicdraw.remote</module>
        <module>bundles/org.eclipse.epsilon.emc.magicdraw.remote.dt</module>
        <module>releng/org.eclipse.epsilon.emc.magicdraw.remote.feature</module>
        <module>releng/org.eclipse.epsilon.emc.magicdraw.targetplatform</module>
        <module>releng/org.eclipse.epsilon.emc.magicdraw.updatesite</module>
        <module>releng/org.eclipse.epsilon.emc.magicdraw.remote.dt.feature</module>
        <module>tests/org.eclipse.epsilon.emc.magicdraw.remote.tests</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho-version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.eclipse.tycho.extras</groupId>
                        <artifactId>tycho-buildtimestamp-jgit</artifactId>
                        <version>${tycho-version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <strictVersions>false</strictVersions>
                    <timestampProvider>jgit</timestampProvider>
                    <jgit.dirtyWorkingTree>warning</jgit.dirtyWorkingTree>
                    <jgit.ignore>
                        pom.xml
                        .META-INF_MANIFEST.MF
                        .polyglot.build.properties
                        .polyglot.feature.xml
                        .polyglot..META-INF_MANIFEST.MF
                    </jgit.ignore>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <argLine>-Xms1500m -Xmx1500m -XX:+UseG1GC -XX:+UseStringDeduplication -XX:MaxDirectMemorySize=2g -Dstorage.diskCache.bufferSize=300 -Dmemory.chunk.size=1073741824</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <target>
                        <artifact>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>org.eclipse.epsilon.emc.magicdraw.targetplatform</artifactId>
                            <version>${project.parent.version}</version>
                        </artifact>
                    </target>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <version>${tycho-version}</version>
                <executions>
                    <execution>
                        <id>attach-source</id>
                        <goals>
                            <goal>plugin-source</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>source-feature</id>
                        <goals>
                            <goal>feature-source</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-plugin</artifactId>
                <version>${tycho-version}</version>
                <executions>
                    <execution>
                        <id>attach-p2-metadata</id>
                        <phase>package</phase>
                        <goals>
                            <goal>p2-metadata</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
